# exfil

./: .gitignore  DISTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: amd.rs  gamma.rs  lib.rs  main.rs  nvapi.rs  store.rs  vibrance.rs  watcher.rs
src/lib/: SettingsModal.svelte  Slider.svelte  SlotRail.svelte  Titlebar.svelte  api.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/tray/: +page.svelte
