[package]
name = "exfil-v2"
version = "2.0.0"
description = "EXFIL — per-game color/gamma/vibrance preset tool"
authors = ["Blazzer"]
edition = "2021"

[lib]
name = "exfil_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

# Windows display + NVAPI FFI. GDI gamma ramps via the `windows` crate;
# NVAPI digital vibrance via raw nvapi64.dll QueryInterface (no DLL injection —
# all writes go through the display driver, BattlEye/EAC-safe).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_ColorSystem",
] }
libloading = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
